Always use the encoding the user specified when opening files with the KEncodingFileDialog.

Background:
Kwrite does the following steps:
1. creates a new document
2. set the document encoding
3. open the document

Kate did the following:
1. create a new document
2. set the document encoding
3. call SessionConfigInterface::readSessionConfig on the document
   --> this read the cached encoding
4. open the document (with the wrong encoding in 3)

Now step 3 is replaced by the ParameterizedSessionConfigInterface, which reads the sessoin
config with the falg SkipEncoding.

Btw: Encoding Autodetection does nothing in the Open/Save config dialog. Anyone an idea???

BUG: 125618
CCMAIL: kwrite-devel@kde.org

svn path=/trunk/KDE/kdesdk/kate/; revision=1093240