kate/app/kateviewmanager.cpp
@@ -177,9 +177,12 @@ void KateViewManager::slotDocumentOpen ()
                                       cv->document()->url().url(),
                                       QString(), m_mainWindow, i18n("Open File"));
 
+    KateDocumentInfo docInfo;
+    docInfo.openedByUser = true;
+
     KTextEditor::Document *lastID = 0;
     for (KUrl::List::Iterator i = r.URLs.begin(); i != r.URLs.end(); ++i)
-      lastID = openUrl( *i, r.encoding, false );
+      lastID = openUrl( *i, r.encoding, false, false, docInfo);
 
     if (lastID)
       activateView (lastID);
@@ -213,9 +216,13 @@ void KateViewManager::slotDocumentClose ()
 
 }
 
-KTextEditor::Document *KateViewManager::openUrl (const KUrl &url, const QString& encoding, bool activate, bool isTempFile)
+KTextEditor::Document *KateViewManager::openUrl (const KUrl &url,
+                                                 const QString& encoding,
+                                                 bool activate,
+                                                 bool isTempFile,
+                                                 const KateDocumentInfo& docInfo)
 {
-  KTextEditor::Document *doc = KateDocManager::self()->openUrl (url, encoding, isTempFile);
+  KTextEditor::Document *doc = KateDocManager::self()->openUrl (url, encoding, isTempFile, docInfo);
 
   if (!doc->url().isEmpty())
     m_mainWindow->fileOpenRecent->addUrl( doc->url() );
@@ -295,9 +302,9 @@ bool KateViewManager::createView ( KTextEditor::Document *doc )
   connect(view, SIGNAL(focusIn(KTextEditor::View *)), this, SLOT(activateSpace(KTextEditor::View *)));
 
   activeViewSpace()->addView( view );
-   
+
   viewCreated(view);
-  
+
   activateView( view );
 
   return true;
